- Ensure error handling for fetch requests to handle server or network issues.
- Update Go server handlers to provide routes for retrieving past trips based on user roles.
- Fix URL construction in JavaScript fetch calls to match the server's expected endpoints.
- Test and verify that past trips are correctly displayed in the user interface.

[2.0.1] - 15/12/2023
- Includes HTML files for user authentication, main menu navigation, profile management, and trip browsing/enrollment. 
- JavaScript files are added for handling AJAX calls to the backend services, managing session state, and dynamically updating the UI based on user interactions. 
- Added gorilla/handlers package to handle Cross-Origin Resource Sharing (CORS).
- Configured the CORS middleware to allow all origins for development convenience.
- Integrated the CORS middleware into the HTTP server setup.
- Added validation to ensure trip start times are set at least 30 minutes into the future.
- Included logic to retrieve car owner details from the user session and add them to the trip data before publishing.
- Fixed issues with form submission to prevent premature closure and ensure trip data is sent to the backend correctly.
- The user interface has been updated to include a cancel button next to each enrolled trip. Upon clicking, the cancellation is processed, and the user receives a confirmation message. Error handling is in place to notify users of any issues during the process.

[2.0.0] - 15/12/2023
This commit introduces the foundational for the frontend aspect of the Car Pooling Service application. 

- An index.html file has been created to serve as the entry point to the application, along with accompanying CSS and JavaScript files to manage the presentation and interactive behavior of the application.
- The file structure is organized into separate folders for stylesheets (css) and scripts (js) to promote clean code organization and ease of development as the project grows.